# claude-memory-manager

./: .gitignore  LICENSE  README.md  RELEASE-v0.1.0.md  checksums.sha256  index.html  latest.json  package-lock.json  package.json  tsconfig.json
scripts/: demo-seed.py  demo.sh  generate-latest-json.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autopilot.rs
src-tauri/src/models/: memory.rs
src-tauri/src/services/: bootstrap.rs  claude_api.rs  dreamer.rs  embeddings.rs  frontmatter.rs  hook.rs  ingestion.rs  installer.rs  mcp_server.rs  mod.rs  organizer.rs  portable.rs  project.rs  scanner.rs
src-tauri/src/store/: dreams.rs  edges.rs  encountered.rs  history.rs  memories.rs  mod.rs  repo_edges.rs  settings.rs  smoke_test.rs  topics.rs
src/assets/styles/: main.css
src/components/: MarkdownBody.vue
src/composables/: useTauri.ts
src/router/: index.ts
src/stores/: app.ts
src/types/: index.ts
src/views/: DreamView.vue  GraphView.vue  HomeView.vue  SearchView.vue  SettingsView.vue  TopicView.vue
