[package]
name = "claude-memory-manager"
version = "0.1.4"
edition = "2021"

[lib]
name = "claude_memory_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "claude-memory-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
sha2 = "0.10"
