[package]
name = "claude-memory-manager"
version = "0.3.5"
edition = "2021"

[lib]
name = "claude_memory_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "claude-memory-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "rt"] }
rusqlite = { version = "0.32", features = ["bundled", "functions", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
sha2 = "0.10"
fastembed = "4"
sqlite-vec = "0.1.1"
